tdf#168788 return empty any for empty string for Numeric/Currency Controls

which is what Formatted Controls do

Change-Id: I7991a3e404bc2bef04bca62f52aa1ca8388b1f44
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193635
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>